docs(ai-dev): plan346 Phase 2 批次A收口——nop-core/nop-api-core/kernel-small 勾选+follow-ups+08-25日志